# anchor

./: .cspell-anchor-dictionary.txt  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CODEX_NOTES.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  Untitled  bump-version.sh  clippy.toml  codecov.yaml  launch-test-validator.sh  oft.json  setup-tests.sh  test_output.txt
asm-v2/: Cargo.toml
asm-v2/macros/: Cargo.toml
asm-v2/macros/src/: lib.rs
asm-v2/runtime/: Cargo.toml
asm-v2/runtime/src/: lib.rs
asm-v2/src/: lib.rs  preamble.rs
bench/: .gitignore  Anchor.toml  BINARY_SIZE.md  COMPUTE_UNITS.md  Cargo.toml  README.md  STACK_MEMORY.md  results.json
bench/src/: bench.rs  graphs.rs  history.rs  lib.rs  main.rs
bench/src/flamegraph/: mod.rs  svg.rs  trace.rs  walker.rs
bench/src/programs/: helloworld.rs  mod.rs  multisig.rs  nested.rs  prop_amm.rs  vault.rs
bench/tests/: helloworld.rs  multisig.rs  nested.rs  prop_amm.rs  vault.rs
bitcoin/: Cargo.toml
bitcoin/collections/: Cargo.toml
bitcoin/collections/src/: lib.rs
bitcoin/math/: Cargo.toml
bitcoin/math/src/: lib.rs
bitcoin/src/: lib.rs
bitcoin/transactions/: Cargo.toml  README.md
bitcoin/transactions/src/: arch.rs  bytes.rs  calc_fee.rs  consolidation.rs  constants.rs  error.rs  fee_rate.rs  lib.rs  mempool.rs  util.rs  utxo_info.rs  utxo_info_json.rs
cli/: Cargo.toml  build.rs
cli/cli-macros/: Cargo.toml
cli/cli-macros/src/: lib.rs
cli/npm-package/: package.json
cli/src/: abs_path.rs  account.rs  analyze.rs  checks.rs  codama.rs  config.rs  coverage.rs  doc_gen.rs  error.rs  fetch.rs  flamegraph.rs  forge.rs  git.rs  guard.rs  keygen.rs  lib.rs  lint.rs  no_dna.rs  path.rs  process.rs  profile.rs  program.rs  rust_template.rs  shield.rs  solidity_template.rs
cli/src/debugger/: arena.rs  cargo_deps.rs  gdb.rs  highlight.rs  loose.rs  mod.rs  model.rs  path_label.rs  source.rs  tui.rs
cli/src/fetch/: chunks.rs  decompress.rs  history.rs  legacy.rs  mod.rs  output.rs  parallel.rs  pmp.rs  rpc.rs  sessions.rs
cli/src/flamegraph/: mod.rs  svg.rs  trace.rs  walker.rs
cli/tests/: debugger_symbol_resolution.rs
client/: Cargo.toml
client/example/: Cargo.toml  run-test.sh
client/example/src/: blocking.rs  main.rs  nonblocking.rs
client/src/: blocking.rs  lib.rs  nonblocking.rs
cluster/: Cargo.toml
idl/: Cargo.toml
idl/spec/: Cargo.toml
idl/spec/src/: lib.rs
idl/src/: build.rs  convert.rs  lib.rs
lang/: Cargo.toml  build.rs
lang-v2/: Cargo.toml  README.md  llms.txt
lang-v2/derive/: Cargo.toml
lang-v2/derive/src/: access_control.rs  constant.rs  error_code.rs  idl.rs  init_space.rs  lib.rs  parse.rs  pda.rs  pod_wrapper.rs
lang-v2/src/: constraints.rs  context.rs  context_cpi.rs  cpi.rs  cursor.rs  dispatch.rs  event.rs  hash.rs  idl_build.rs  lib.rs  loader.rs  pod.rs  prelude.rs  programs.rs  traits.rs
lang-v2/src/accounts/: account.rs  borsh_account.rs  boxed.rs  interface.rs  mod.rs  option.rs  program.rs  serialized_account.rs  signer.rs  slab.rs  slab_hooks.rs  system_account.rs  sysvar.rs  token.rs  unchecked_account.rs
lang-v2/src/testing/: account_buffer.rs  mod.rs  sbf_input_buffer.rs
lang-v2/tests/: account_wrapper_checks.rs  borsh_exit_semantics.rs  close_semantics.rs  cursor_and_remaining_accounts.rs  error_code_collisions.rs  init_space.rs  miri_account_view_aliasing.rs  miri_cursor_walk.rs  miri_slab_alignment.rs  miri_slab_construction.rs  miri_wrapper_accounts.rs  pod_vec_validation.rs  pod_wrapper_eq.rs  program_id_goldens.rs  remaining_accounts_mut_check.rs  single_deser.rs  slab_resize_reproducers.rs
lang-v2/tests/common/: mod.rs
lang/attribute/access-control/: Cargo.toml
lang/attribute/account/: Cargo.toml
lang/attribute/accounts/: Cargo.toml
lang/attribute/constant/: Cargo.toml
lang/attribute/error/: Cargo.toml
lang/attribute/event/: Cargo.toml
lang/attribute/program/: Cargo.toml
lang/derive/accounts/: Cargo.toml
lang/derive/serde/: Cargo.toml
lang/error/: Cargo.toml
lang/src/: account_meta.rs  bpf_upgradeable_state.rs  bpf_writer.rs  btc_tx_builder.rs  common.rs  context.rs  error.rs  idl.rs  lazy.rs  lib.rs  rent.rs  stake_history.rs  system_program.rs  vec.rs
lang/syn/: Cargo.toml
lang/tests/: account_loader_truncation.rs  account_reload.rs  generics_test.rs  macros.rs  mut_compile_check.rs  pinocchio_stack_smoke.rs  security_init_if_needed.rs  seeds_compile.rs  serialization.rs  signature_verifications.rs  space.rs  zero_copy_compile.rs
saturn-account-shards/: Cargo.toml
saturn-account-shards/src/: error.rs  lib.rs  prelude.rs  shard.rs  shard_indices.rs  shard_set.rs  split.rs  update.rs
saturn-bitcoin-transactions/: Cargo.toml  README.md
saturn-bitcoin-transactions/src/: arch.rs  calc_fee.rs  consolidation.rs  error.rs  input_calc.rs  lib.rs  mempool.rs  serde.rs  util.rs  utxo_info.rs  utxo_info_json.rs
saturn-utxo-parser/: Cargo.toml
saturn-utxo-parser-derive/: Cargo.toml
saturn-utxo-parser-derive/src/: ir.rs  lib.rs  parse.rs  validate.rs
saturn-utxo-parser-derive/tests/: anchor_rune_tests.rs  array_tests.rs  integration_tests.rs  rune_id_amount_tests.rs  rune_presence_tests.rs  test_helpers.rs
saturn-utxo-parser/src/: error.rs  lib.rs  test_registry.rs
spl/: Cargo.toml
spl-v2/: Cargo.toml
spl-v2/src/: associated_token.rs  extensions.rs  lib.rs  mint.rs  token.rs  token_interface.rs  token_types.rs
spl-v2/tests/: miri_spl_pod.rs
spl/src/: associated_token.rs  cpi_util.rs  governance.rs  lib.rs  memo.rs  metadata.rs  stake.rs  token.rs  token_2022.rs  token_interface.rs
tests-v2/: Cargo.toml
tests-v2/src/: lib.rs
tests-v2/tests/: accounts.rs  borsh_realloc.rs  constraints.rs  cpi.rs  custom_constraints.rs  derives.rs  dup_mut.rs  dup_realloc.rs  seeds.rs  spl.rs  ui_required_constraints.rs
tests/auction-house/: Cargo.toml  package.json
tests/btc_tx/: Cargo.toml
tests/solana-program-test-compatibility/: Anchor.toml  Cargo.toml  package.json
tests/test-utils/: Cargo.toml
v2-testing/: Cargo.toml
v2-testing/src/: lib.rs  profile.rs  render.rs
(+1642 files in other folders)
