
[workspace]
members = [
    "avm",
    "cli",
    "client",
    "idl",
    "lang",
    "lang/attribute/*",
    "lang/derive/*",
    "lang/syn",
    "spl",
]
exclude = ["tests/cfo/deps/openbook-dex", "tests/swap/deps/openbook-dex"]
resolver = "2"

[workspace.package]
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/solana-foundation/anchor"
version = "0.31.1"

[workspace.dependencies]
anyhow = "1.0.32"
base64 = "0.21"
bincode = "1.3.3"
cargo_toml = "0.19.2"
cfg-if = "1.0.0"
chrono = "0.4"
clap = { version = "4.5.17", default-features = false }
clap_complete = "4.5.26"
dirs = "4.0.0"
flate2 = "1.0.19"
heck = "0.4.0"
pathdiff = "0.2.0"
portpicker = "0.1.1"
regex = "1.8.3"
reqwest = { version = "0.11.9", default-features = false }
semver = "1.0.4"
serde = { version = "1.0.136", default-features = false }
serde_json = "1.0"
shellexpand = "2.1.0"
solana-cli-config = "2"
solana-faucet = "2"
solana-rpc-client = "2"
solana-sdk = "2"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
tar = "0.4.35"
tempfile = "3.3.0"
toml = "0.7.6"
walkdir = "2.3.2"


[profile.release]
lto = true

[profile.release.package.anchor-cli]
codegen-units = 1
