
[workspace]
members = [
    "avm",
    "cli",
    "client",
    "idl",
    "lang",
    "lang/attribute/*",
    "lang/derive/*",
    "lang/syn",
    "spl",
]
exclude = ["tests/cfo/deps/openbook-dex", "tests/swap/deps/openbook-dex"]
resolver = "2"

[workspace.package]
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/solana-foundation/anchor"
version = "0.31.1"

[workspace.dependencies]
anyhow = "1.0.32"
base64 = "0.21"
bincode = "1.3.3"
borsh = "0.10.3"
borsh-derive-internal = "0.10.3"
bs58 = "0.5"
bytemuck = { version = "1", features = ["derive"] }
cargo_toml = "0.19.2"
cfg-if = "1.0.0"
chrono = "0.4"
clap = { version = "4.5.17", default-features = false }
clap_complete = "4.5.26"
dirs = "4.0.0"
flate2 = "1.0.19"
futures = "0.3"
heck = "0.4.0"
mpl-token-metadata = { version = "5" }
pathdiff = "0.2.0"
portpicker = "0.1.1"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.8.3"
reqwest = { version = "0.11.9", default-features = false }
semver = "1.0.4"
serde = { version = "1.0.136", default-features = false }
serde_json = "1.0"
sha2 = "0.10"
shellexpand = "2.1.0"
solana-account-decoder = "2"
solana-account-info = "2"
solana-cli-config = "2"
solana-clock = "2"
solana-cpi = "2"
solana-define-syscall = "2"
solana-faucet = "2"
solana-feature-gate-interface = "2"
solana-instruction = "2"
solana-instructions-sysvar = "2"
solana-invoke = "0.4.0"
solana-loader-v3-interface = { version = "3", features = ["bincode"] }
solana-msg = "2"
solana-program-entrypoint = "2"
solana-program-error = { version = "2", features = ["borsh"] }
solana-program-memory = "2"
solana-program-option = "2"
solana-program-pack = "2"
solana-pubkey = { version = "2", features = ["borsh", "bytemuck", "serde"] }
solana-pubsub-client = "2"
solana-rpc-client = "2"
solana-rpc-client-api = "2"
solana-sdk = "2"
solana-sdk-ids = "2"
solana-system-interface = "1"
solana-sysvar = { version = "2", features = ["bincode"] }
solana-sysvar-id = "2"
spl-associated-token-account = { version = "7" }
spl-memo = { version = "6" }
spl-pod = { version = "0.5" }
spl-token = { version = "8" }
spl-token-2022 = { version = "8" }
spl-token-group-interface = { version = "0.6" }
spl-token-metadata-interface = { version = "0.7" }
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
tar = "0.4.35"
tempfile = "3.3.0"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
toml = "0.7.6"
url = "2"
walkdir = "2.3.2"


[profile.release]
lto = true

[profile.release.package.anchor-cli]
codegen-units = 1
