[workspace]
members = [
    "avm",
    "cli",
    "client",
    "idl",
    "lang",
    "lang/attribute/*",
    "lang/derive/*",
    "lang/syn",
]

# FIXME(pinocchio-task/spl): anchor-spl is not yet migrated to AccountView / InstructionView CPI.
# Re-add "spl" to members when SPL is fixed; build with: cargo build --manifest-path spl/Cargo.toml
exclude = [
    "spl",
    "tests/cfo/deps/openbook-dex",
    "tests/swap/deps/openbook-dex",
]
resolver = "2"

[workspace.package]
version = "1.0.0"

[workspace.dependencies]
solana-account = "3.2.0"
solana-account-decoder = "3.0.14"
solana-account-info = "3.1.0"
solana-cli-config = "3.0.14"
solana-client = "3.0.14"
solana-clock = "3.0.1"
solana-commitment-config = "3.1.1"
solana-compute-budget-interface = "3.0.0"
solana-cpi = "3.0.0"
solana-define-syscall = "3.0.0"
solana-faucet = "3.0.14"
solana-feature-gate-interface = "3.0.0"
solana-instruction = "3.0.0"
solana-instructions-sysvar = "3.0.0"
solana-invoke = "0.5.0"
solana-keypair = "3.0.1"
solana-loader-v3-interface = "6.0.1"
solana-message = "3.0.1"
solana-msg = "3.1.0"
solana-packet = "3.0.0"
solana-program = "3.0.0" # must be kept in sync with `cli/solana-program-version`
solana-program-entrypoint = "3.1.1"
solana-program-error = "3.0.0"
solana-program-memory = "3.1.0"
solana-program-option = "3.0.1"
solana-program-pack = "3.1.0"
solana-pubkey = "3.0.0"
solana-pubsub-client = "3.0.14"
solana-rpc-client = "3.0.14"
solana-rpc-client-api = "3.0.14"
solana-sdk-ids = "3.1.0"
solana-signature = "3.3.0"
solana-signer = "3.0.0"
solana-stake-interface = "2.0.2"
solana-system-interface = "2.0.0"
# FIXME: solana-sysvar 3.1.x contains breaking changes to sysvar retrieval
solana-sysvar = "3.1.1"
solana-sysvar-id = "3.1.0"
solana-transaction = "3.0.1"

pinocchio = { git = "https://github.com/anza-xyz/pinocchio", rev = "d19f19b8e50f50f1c41ffc7b979d1d14de68f8c2", features = ["cpi", "copy", "account-resize"] }
pinocchio-system = { git = "https://github.com/anza-xyz/pinocchio", rev = "d19f19b8e50f50f1c41ffc7b979d1d14de68f8c2" }
pinocchio-token-2022 = { git = "https://github.com/anza-xyz/pinocchio", rev = "d19f19b8e50f50f1c41ffc7b979d1d14de68f8c2" }
pinocchio-token = { git = "https://github.com/anza-xyz/pinocchio", rev = "d19f19b8e50f50f1c41ffc7b979d1d14de68f8c2" }
pinocchio-associated-token-account = { git = "https://github.com/anza-xyz/pinocchio", rev = "d19f19b8e50f50f1c41ffc7b979d1d14de68f8c2" }
pinocchio-memo = { git = "https://github.com/anza-xyz/pinocchio", rev = "d19f19b8e50f50f1c41ffc7b979d1d14de68f8c2" }

[profile.release]
lto = true

[profile.release.package.anchor-cli]
codegen-units = 1
