[package]
name = "anchor-cli"
description = "Anchor CLI"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "anchor"
path = "src/bin/main.rs"

[features]
dev = []

[dependencies]
anchor-client = { path = "../client", version = "0.31.1" }
anchor-lang = { path = "../lang", version = "0.31.1" }
anchor-lang-idl = { path = "../idl", version = "0.1.2", features = ["build", "convert"] }

anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
cargo_toml.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
dirs.workspace = true
flate2.workspace = true
heck.workspace = true
pathdiff.workspace = true
portpicker.workspace = true
regex.workspace = true
reqwest = { workspace = true, default-features = false, features = ["multipart", "blocking", "rustls-tls"] }
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
shellexpand.workspace = true
solana-cli-config.workspace = true
solana-faucet.workspace = true
solana-rpc-client.workspace = true
solana-sdk.workspace = true
syn = { workspace = true, features = ["full", "extra-traits"] }
tar.workspace = true
toml.workspace = true
walkdir.workspace = true
