[package]
name = "anchor-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "An RPC client to interact with Anchor programs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = []
debug = []
mock = []

[dependencies]
anchor-lang = { path = "../lang", version = "0.31.1" }
anyhow.workspace = true
futures.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
solana-account-decoder.workspace = true
solana-pubsub-client.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
solana-sdk.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
url.workspace = true
