[package]
name = "anchor-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "An RPC client to interact with Anchor programs"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = []
debug = []
mock = []

[dependencies]
anchor-lang = { path = "../lang", version = "0.32.1" }
anyhow = "1"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
solana-account.workspace = true
solana-account-decoder.workspace = true
solana-commitment-config.workspace = true
solana-instruction.workspace = true
solana-program.workspace = true
solana-pubsub-client.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
solana-signature.workspace = true
solana-signer.workspace = true
solana-transaction.workspace = true
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
url = "2"
