[package]
name = "anchor-lang-idl"
version = "0.1.2"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Anchor framework IDL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
build = ["dep:regex"]
convert = ["dep:heck", "dep:sha2"]

[dependencies]
anchor-lang-idl-spec = { path = "./spec", version = "0.1.0" }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# `convert` feature only
heck = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

# `build` feature only
regex = { version = "1", optional = true }
