[package]
name = "anchor-lang-idl"
version = "0.1.2"
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Anchor framework IDL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
build = ["regex"]
convert = ["heck", "sha2"]

[dependencies]
anchor-lang-idl-spec = { path = "./spec", version = "0.1.0" }
anyhow = "1"

# `convert` feature only
heck = { version = "0.3", optional = true }

# `build` feature only
regex = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", optional = true }
