[package]
name = "anchor-lang-v2"
version = "0.1.0"
edition = "2021"
description = "Anchor v2: trait-based account system for Solana (no_std)"
license = "Apache-2.0"

[features]
default = ["alloc", "guardrails"]
alloc = ["pinocchio/alloc"]
idl-build = []
# Runtime safety nets that catch caller bugs the Rust borrow checker
# can't see statically. Default-on. Disabling saves CU at the cost of
# diagnostic panics for misuse — see lib.rs / Account<T> docs.
# Disable via `default-features = false` plus re-adding the features you want.
guardrails = []

[dependencies]
anchor-derive-accounts-v2 = { path = "./derive", version = "0.1.0" }
pinocchio = { workspace = true, features = ["copy", "account-resize"] }
pinocchio-system = "0.6"
solana-address = { version = "2.0", features = ["bytemuck", "borsh", "syscalls", "curve25519"] }
solana-program-error = { version = "3.0", features = ["borsh"] }
solana-msg = { workspace = true }
borsh = "1.5.7"
bytemuck = { version = "1", features = ["derive"] }
wincode = { version = "0.4", features = ["derive"] }

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = "4.0"

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha2 = "0.10"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
