[package]
name = "anchor-lang"
version = "0.31.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
edition = "2021"
license = "Apache-2.0"
description = "Solana Sealevel eDSL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = ["anchor-derive-accounts/allow-missing-optionals"]
anchor-debug = [
    "anchor-attribute-access-control/anchor-debug",
    "anchor-attribute-account/anchor-debug",
    "anchor-attribute-constant/anchor-debug",
    "anchor-attribute-error/anchor-debug",
    "anchor-attribute-program/anchor-debug",
    "anchor-derive-accounts/anchor-debug"
]
derive = []
idl-build = [
    "anchor-attribute-account/idl-build",
    "anchor-attribute-constant/idl-build",
    "anchor-attribute-error/idl-build",
    "anchor-attribute-program/idl-build",
    "anchor-derive-accounts/idl-build",
    "anchor-derive-serde/idl-build",
    "anchor-lang-idl/build",
]
init-if-needed = ["anchor-derive-accounts/init-if-needed"]
interface-instructions = ["anchor-attribute-program/interface-instructions"]
lazy-account = ["anchor-attribute-account/lazy-account", "anchor-derive-serde/lazy-account"]
runes = ["satellite-bitcoin/runes"]
utxo-consolidation = ["satellite-bitcoin/utxo-consolidation"]

[dependencies]
anchor-attribute-access-control = { path = "./attribute/access-control", version = "0.31.1" }
anchor-attribute-account = { path = "./attribute/account", version = "0.31.1" }
anchor-attribute-constant = { path = "./attribute/constant", version = "0.31.1" }
anchor-attribute-error = { path = "./attribute/error", version = "0.31.1" }
anchor-attribute-program = { path = "./attribute/program", version = "0.31.1" }
anchor-derive-accounts = { path = "./derive/accounts", version = "0.31.1" }
anchor-derive-serde = { path = "./derive/serde", version = "0.31.1" }
anchor-derive-space = { path = "./derive/space", version = "0.31.1" }
anchor-derive-utxo-parser = { path = "./derive/utxo_parser", version = "0.1.0" }

# `anchor-lang-idl` should only be included with `idl-build` feature
anchor-lang-idl = { path = "../idl", version = "0.1.2", optional = true }

base64 = "0.21"
bincode = "1"
borsh = { version = "1.4.0" }
bytemuck = "1"
arch_program = { path = "../deps/program", version = "0.5.3" }
thiserror = "1"
bitcoin = { workspace = true }

# Bitcoin transaction support crates (re-exported for user convenience)
satellite-bitcoin = { workspace = true }
