[package]
name = "anchor-lang"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Solana Sealevel eDSL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = ["anchor-derive-accounts/allow-missing-optionals"]
anchor-debug = [
    "anchor-attribute-access-control/anchor-debug",
    "anchor-attribute-account/anchor-debug",
    "anchor-attribute-constant/anchor-debug",
    "anchor-attribute-error/anchor-debug",
    "anchor-attribute-event/anchor-debug",
    "anchor-attribute-program/anchor-debug",
    "anchor-derive-accounts/anchor-debug",
]
derive = []
event-cpi = ["anchor-attribute-event/event-cpi"]
idl-build = [
    "anchor-attribute-account/idl-build",
    "anchor-attribute-constant/idl-build",
    "anchor-attribute-event/idl-build",
    "anchor-attribute-error/idl-build",
    "anchor-attribute-program/idl-build",
    "anchor-derive-accounts/idl-build",
    "anchor-derive-serde/idl-build",
    "anchor-lang-idl/build",
]
init-if-needed = ["anchor-derive-accounts/init-if-needed"]
interface-instructions = ["anchor-attribute-program/interface-instructions"]
lazy-account = ["anchor-attribute-account/lazy-account", "anchor-derive-serde/lazy-account"]

[dependencies]
anchor-attribute-access-control = { path = "./attribute/access-control", version = "0.31.1" }
anchor-attribute-account = { path = "./attribute/account", version = "0.31.1" }
anchor-attribute-constant = { path = "./attribute/constant", version = "0.31.1" }
anchor-attribute-error = { path = "./attribute/error", version = "0.31.1" }
anchor-attribute-event = { path = "./attribute/event", version = "0.31.1" }
anchor-attribute-program = { path = "./attribute/program", version = "0.31.1" }
anchor-derive-accounts = { path = "./derive/accounts", version = "0.31.1" }
anchor-derive-serde = { path = "./derive/serde", version = "0.31.1" }
anchor-derive-space = { path = "./derive/space", version = "0.31.1" }

# `anchor-lang-idl` should only be included with `idl-build` feature
anchor-lang-idl = { path = "../idl", version = "0.1.2", optional = true }

base64.workspace = true
bincode.workspace = true
borsh.workspace = true
bytemuck = {workspace = true, features = ["derive"] }
solana-account-info.workspace = true
solana-clock.workspace = true
solana-cpi.workspace = true
solana-define-syscall.workspace = true
solana-feature-gate-interface.workspace = true
solana-instruction.workspace = true
solana-instructions-sysvar.workspace = true
solana-invoke.workspace = true
solana-loader-v3-interface = { workspace = true, features = ["bincode"] }
solana-msg.workspace = true
solana-program-entrypoint.workspace = true
solana-program-error = { workspace = true, features = ["borsh"] }
solana-program-memory.workspace = true
solana-program-option.workspace = true
solana-program-pack.workspace = true
solana-pubkey = { workspace = true, features = ["borsh", "bytemuck", "serde"] }
solana-sdk-ids.workspace = true
solana-system-interface.workspace = true
solana-sysvar = { workspace = true, features = ["bincode"] }
solana-sysvar-id.workspace = true
thiserror.workspace = true

[lints.rust.unexpected_cfgs]
 level = "warn"
 check-cfg = ['cfg(target_os, values("solana"))']
