[package]
name = "saturn-account-shards"
version = "0.1.0"
edition = "2021"

[dependencies]
# FIXME: This dependency is needed to use the declare_fixed_array!() macro,
# which feels like it shouldn't be the case
bytemuck = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
saturn-bitcoin-transactions = { workspace = true }
saturn-collections = { workspace = true }
arch_program = { workspace = true }
ordinals = { workspace = true }
bitcoin = { workspace = true }
saturn-safe-math = { workspace = true }
anchor-lang = { path = "../lang", version = "0.31.1" }

[features]
default = ["runes", "utxo-consolidation"]
runes = ["saturn-bitcoin-transactions/runes"]
utxo-consolidation = ["saturn-bitcoin-transactions/utxo-consolidation"]
