[package]
name = "saturn-utxo-parser-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "visit"] }

[dev-dependencies]
arch_program = { workspace = true }
anchor-lang = { path = "../lang" }
saturn-bitcoin-transactions = { workspace = true }
saturn-utxo-parser = { workspace = true }
trybuild = { workspace = true }

[features]
default = ["runes"]
runes = ["saturn-bitcoin-transactions/runes"]