[package]
name = "saturn-utxo-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_program = { workspace = true }
saturn-bitcoin-transactions = { workspace = true }
saturn-utxo-parser-derive = { workspace = true }
once_cell = "1"
thiserror = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
anchor-lang = { path = "../lang" }

[features]
