[workspace]
members = [".", "programs/callee", "programs/caller"]
resolver = "2"

[package]
name = "tests-v2"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anchor-lang = { path = "../lang" }
anchor-lang-v2 = { path = "../lang-v2" }
callee = { path = "programs/callee", features = ["cpi"] }
caller = { path = "programs/caller", features = ["cpi"] }
litesvm = "0.11.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-pubkey = "3.0"
solana-sdk-ids = "3.1"
solana-signer = "3.0.0"
solana-transaction = "3.0.1"
anyhow = "1"

[dev-dependencies]
